tests/ui/const-generics/double_bool_cond.normal.stderr
error[E0277]: the trait bound `ConstTwo<{ N <= 5 }, {N > 3}>: Default` is not satisfied
  --> $DIR/double_bool_cond.rs:30:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
...
LL |     _c: ConstTwo<{ N <= 5 }, {N > 3}>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ConstTwo<{ N <= 5 }, {N > 3}>`
   |
   = help: the following other types implement trait `Default`:
             ConstTwo<false, false>
             ConstTwo<false, true>
             ConstTwo<true, false>
             ConstTwo<true, true>
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `ConstTwo<{ N <= 5 }, {N > 3}>` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | pub struct ConstTwo<const A: bool, const B: bool>;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
